spacing fix

--- a/src/components/CalendarEvent/CalendarEvent.css
+++ b/src/components/CalendarEvent/CalendarEvent.css
@@ -1,5 +1,5 @@
 .event-box {
-    width: 300px;   
+    width: 350px;   
     height: 200px;
     padding: 5px 15px;
     background-color: #e8e8e8;
@@ -8,7 +8,7 @@
     /* box-shadow: 2px 2px 5px #808080; */
 }
 .card-title {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     margin-bottom: 10px;
     width: 100%;
     height: 20%;
@@ -18,12 +18,12 @@
     height: 80%;
 }
 .card-subtext p {
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 @media only screen and (min-width: 700px) and (max-width: 1100px) { /*ipad*/
     .event-box {
-        width: 250px;   
+        width: 350px;   
         height: 200px;
     }
 }
